# pdf-barcode-extractor

./: README.md  barcode-extractor.py  pyproject.toml
